Feat/create networks (#1556)
* feat: update spartan

* feat: run spartan healthcheck fixes

* feat: run spartan migrations

* feat: rename tabs component

* feat: add variant for tabs trigger

* fix: resolve issues arising from update

* feat(wip): split issuer and network templates

* feat: add components for network form

* feat: add states and countries data

* fix: typo in tw-underline

* fix: replace brn table with tanstack table

* refactor: run control flow syntax migration

* fix: captions

* fix: checkbox

* fix: table looks

* fix: align table looks

* feat: reset hlm table and introduc our own tokens for styling

* fix: reset datatable

* feat: start rebuilding badges table

* feat: reimplement datatable-badges

* fix: show msg when navigate to badge awarding

* feat: reimplement micro degree table

* feat: simplify the micro degree component

* feat: implement sorting in badges datatable

* feat: enable sorting in micro degree table

* feat: finish qr code award table

* feat: reimplement issuer detail table

* feat: use name instead of email for badge recipients

* refactor: format

* feat: reimplement micro degree graduates table

* fix: spacings in multiline table cells

* fix: resolve line alignment issue in badge table

* feat: reimplement issuer staff table

* feat: wip

* feat: minor ui and api changes

* feat: finish staff request tables

* feat: add breadcrumbs

* fix: import conflicts spartan directives

* feat: redo profile emails table

* feat: more wip...

* feat: table actions

* feat: translations, minor api and ui changes

* feat: network invites adjustments

* fix: two wrong imports

* feat: adjust revoke api and add message for revoked invite

* feat: display paginated networks

* fix: tabs style

* fix: network catalog header

* fix: networks catalog not available on prod yet

* fix: use ng-template for network list template

* fix: add missing translation

* refactor: remove *ngIf

* fix: convert to input signals

* fix: signal call



--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -262,6 +262,7 @@
 				<a [routerLink]="['/catalog/badges']">Badges A-Z</a>
 				<a [routerLink]="['/catalog/issuers']">{{ 'General.institutionsNav' | translate }}</a>
 				<a [routerLink]="['/catalog/learningpaths']">{{ 'LearningPath.learningpathsNav' | translate }}</a>
+				<!-- <a [routerLink]="['/catalog/networks']">{{ 'Network.networksNav' | translate }}</a> -->
 
 				@if (cmsMenus && cmsMenus.header[translate.currentLang]) {
 					@for (item of cmsMenus.header[translate.currentLang]; track item.id) {
