--- a/src/app/issuer/components/issuer-staff/issuer-staff.component.html
+++ b/src/app/issuer/components/issuer-staff/issuer-staff.component.html
@@ -22,7 +22,7 @@
 			</div>
 			<oeb-button
 				[text]="'Issuer.addMember' | translate"
-				size="mediumText"
+				class="tw-font-semibold"
 				(click)="openDialog(this.translate.instant('Issuer.addMember'))"
 			></oeb-button>
 		</div>
