--- a/src/app/signup/components/signup/signup.component.html
+++ b/src/app/signup/components/signup/signup.component.html
@@ -573,6 +573,7 @@
 					<div class="tw-w-full tw-flex tw-justify-end tw-mt-16 oeb-max-form-width">
 						<oeb-button
 							variant="meinBildungsraum"
+							[disabled]="true"
 							text="{{ 'Signup.registerWithBildungsraum' | translate }}"
 							[img]="'assets/logos/mein-bildungsraum.svg'"
 						>
