--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -13,16 +13,6 @@
 			<h1 hlmH1 class="tw-text-purple tw-font-semibold md:tw-text-[35px] xl:tw-text-[46px]">
 				{{ issuer.name }}
 			</h1>
-			<ng-container *ngIf="public">
-				<p hlmP size="sm" *ngIf="issuer.url">
-					<a
-						class="tw-underline !tw-text-link hover:!tw-text-buttonhover tw-cursor-pointer"
-						target="_blank"
-						[href]="issuer.url"
-						>{{ issuer.url }}</a
-					>
-				</p>
-			</ng-container>
 			<ng-container *ngIf="!public && isFullIssuer(issuer)">
 				<p
 					class="tw-text-oebblack tw-font-semibold md:tw-text-[20px] md:tw-leading-[24.4px] tw-text-[14px] tw-leading-[19.6px]"
@@ -63,7 +53,12 @@
 					variant="secondary"
 				>
 				</oeb-button>
-				<oeb-button class="tw-whitespace-nowrap" *ngIf="public" (click)="routeToUrl(issuer.url)" text="Website">
+				<oeb-button
+					class="tw-whitespace-nowrap"
+					*ngIf="public"
+					(click)="routeToUrl(issuer.url)"
+					[text]="'General.website' | translate"
+				>
 				</oeb-button>
 
 				<!-- Network section -->
