fix: make leaf color grey

--- a/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
+++ b/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
@@ -104,7 +104,7 @@
 			&.leaf {
 				color: var(--color-black);
 				circle {
-					fill: var(--color-purple-50);
+					fill: var(--color-lightgray);
 				}
 			}
 			&.future,
