fix: color for esco areas

--- a/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
+++ b/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
@@ -186,7 +186,7 @@
 	&__esco {
 		&:before {
 			border-color: var(--color-purple);
-			background-color: var(--color-lightpurple);
+			background-color: var(--color-purple-100);
 		}
 	}
 
