fix: missing translate pipe

--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -387,7 +387,7 @@
 														{{ 'CreateBadge.competencies' | translate }}
 													</h2>
 													<p class="tw-text-purple tw-italic tw-mb-4">
-														{{ 'CreateBadge.chooseCompetency' }}
+														{{ 'CreateBadge.chooseCompetency' | translate }}
 													</p>
 													@for (
 														aiCompetency of badgeClassForm.controls.aiCompetencies.controls;
