--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -56,3 +56,7 @@
 <ng-template #addInstitutionsTemplate>
 	<add-institution [network]="network()"> </add-institution>
 </ng-template>
+
+<ng-template #badgesTemplate>
+	<network-badges [network]="network()"></network-badges>
+</ng-template>
