--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -215,57 +215,55 @@
 								}
 								@if (config.category) {
 									<div class="tw-flex tw-text-oebblack tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
-										<dt class="tw-text-sm tw-text-oebblack">
+										<dt class="tw-text-sm tw-text-[#757575]">
 											{{ 'General.category' | translate }}
 										</dt>
-										<dd class="tw-text-sm tw-text-oebblack tw-font-bold md:tw-ml-2">
+										<dd class="tw-text-sm tw-text-oebblack tw-font-medium md:tw-ml-2">
 											{{ config.category }}
 										</dd>
 									</div>
 								}
 								@if (config.duration) {
-									<div
-										class="tw-flex tw-text-sm tw-text-oebblack tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col"
-									>
-										<dt>
+									<div class="tw-flex tw-text-sm tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
+										<dt class="tw-text-[#757575]">
 											{{ 'RecBadgeDetail.duration' | translate }}
 										</dt>
-										<dd class="tw-font-bold md:tw-ml-2">
+										<dd class="tw-text-oebblack tw-font-medium md:tw-ml-2">
 											{{ +config.duration | hourPipe }} {{ 'RecBadge.hours' | translate }}
 										</dd>
 									</div>
 								}
 								@if (config.createdAt) {
-									<div
-										class="tw-flex tw-text-sm tw-text-oebblack tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col"
-									>
-										<dt class="">{{ 'Badge.createdOn' | translate }}</dt>
-										<dd class="tw-font-bold md:tw-ml-2">
+									<div class="tw-flex tw-text-sm tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
+										<dt class="tw-text-[#757575]">{{ 'Badge.createdOn' | translate }}</dt>
+										<dd class="tw-font-medium md:tw-ml-2 tw-text-oebblack">
 											<time [date]="config.createdAt" format="dd.MM.y"></time>
 										</dd>
 									</div>
 								}
 								@if (config.issuedOn) {
-									<div class="tw-flex tw-text-oebblack tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
-										<dt class="tw-text-sm tw-text-oebblack tw-font-bold">
+									<div class="tw-flex tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
+										<dt class="tw-text-sm tw-text-[#757575]">
 											{{ 'RecBadgeDetail.issuedOn' | translate }}
 										</dt>
-										<dd class="tw-text-sm tw-text-oebblack md:tw-ml-2">
+										<dd class="tw-text-sm tw-font-medium tw-text-oebblack md:tw-ml-2">
 											<time [date]="config.issuedOn" format="dd.MM.y"></time>
 										</dd>
 									</div>
 								}
 								@if (config.issuedTo) {
-									<div class="tw-flex tw-text-oebblack tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
-										<dt class="tw-text-sm tw-text-oebblack tw-font-bold">
+									<div class="tw-flex tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
+										<dt class="tw-text-sm tw-text-[#757575]">
 											{{ 'RecBadgeDetail.awardedTo' | translate }}
 										</dt>
-										<dd class="tw-text-sm tw-break-words">&nbsp;{{ config.issuedTo }}</dd>
+										<dd class="tw-text-sm tw-break-words tw-font-medium">
+											&nbsp;{{ config.issuedTo }}
+										</dd>
 									</div>
 								}
 								@if (config.license) {
-									<div class="tw-text-oebblack tw-mt-2 tw-pt-2 tw-flex tw-flex-row">
-										<dt class="tw-text-sm tw-text-oebblack">
+									<div class="tw-mt-2 tw-pt-2 tw-flex tw-flex-row">
+										<dt class="tw-text-sm tw-text-[#757575]">
 											{{ 'General.license' | translate }}
 										</dt>
 										<dd class="tw-text-sm tw-text-oebblack tw-ml-2 tw-flex">
@@ -290,15 +288,11 @@
 									</div>
 								}
 								@if (config.tags.length > 0) {
-									<div class="tw-flex tw-items-start md:tw-flex-row tw-flex-col">
-										<dt class="tw-text-oebblack tw-font-bold md:tw-py-2 md:tw-mr-2 tw-mb-1">
-											Tags
-										</dt>
-										<dd class="tw-text-oebblack">
+									<div class="tw-flex tw-items-start tw-flex-col tw-mt-4">
+										<dt class="tw-text-[#757575] md:tw-py-2 md:tw-mr-2 tw-mb-1">Tags</dt>
+										<dd class="tw-text-[#757575]">
 											@for (tag of config.tags; track tag; let last = $last) {
-												<div
-													class="tag tw-border-[var(--color-purple)] tw-mx-2 tw-ml-0 tw-max-w-24"
-												>
+												<div class="tag tw-border-[#757575] tw-mx-2 tw-ml-0 tw-max-w-24">
 													{{ tag }}
 												</div>
 											}
