--- a/src/styles/oeb/oeb_styles.scss
+++ b/src/styles/oeb/oeb_styles.scss
@@ -16,9 +16,31 @@ html {
 }
 /* colors from mycelia */
 :root {
+	// Style guide
+
+	// Main
 	--color-black: #323232;
-	--color-blue: #7e73ff;
+	--color-purple: #492e98;
+	--color-white: #ffffff;
+
+	// System
+	--color-red: #ff4849;
+	--color-green: #93f993;
+	--color-darkgreen: #004f19;
+
+	// Secondary
+	--color-lightgray: #f5f5f5;
+	--color-midgrey: #dedede;
+	--color-darkgrey: #757575;
+	--color-lavender: #f8f6fc;
+	--color-aipurple: #ccd7ff;
+	--color-mint: #e4ffe4;
+	--color-lightpink: #fff6f6;
 	--color-yellow: #ffcc00;
+	--color-pink: #ffbab9;
+
+	--color-blue: #7e73ff;
+
 	--color-yellow-50: #fffefa;
 	--color-yellow-100: #fff5cb;
 	--color-yellow-200: #ffeb9c;
@@ -31,13 +53,9 @@ html {
 	--color-yellow-900: #514000;
 	--color-yellow-950: #221b00;
 
-	--color-purple: #492e98;
 	--color-brightpurple: #9747ff;
 	--color-buttonhover: #6e30f2;
-	--color-red: #ff4849;
 	--color-lightred: #ff8383;
-	--color-pink: #ffbab9;
-	--color-lightpink: #fff6f6;
 	--color-pink-50: #ffeaea;
 	--color-pink-100: #ffdede;
 	--color-pink-200: #ffd2d1;
@@ -50,8 +68,6 @@ html {
 	--color-pink-900: #f97573;
 	--color-pink-950: #f76866;
 	--color-lightgreen: #ecfeed;
-	--color-green: #93f993;
-	--color-mint: #e4ffe4;
 	--color-green-50: #e4ffe4;
 	--color-green-100: #d3ffd3;
 	--color-green-200: #c3fec3;
@@ -64,9 +80,6 @@ html {
 	--color-green-900: #55ee56;
 	--color-green-950: #47ea48;
 
-	--color-white: #ffffff;
-
-	--color-lightgray: #f5f5f5;
 	--color-darkgray: #6b6b6b;
 	--color-grayinteractive: #cfcece;
 	--color-gray-50: #f3f3f3;
