feat: color adjustments

--- a/src/app/issuer/components/ai-assistant/ai-assistant.component.html
+++ b/src/app/issuer/components/ai-assistant/ai-assistant.component.html
@@ -1,4 +1,4 @@
-<div class="tw-text-[14px] tw-mt-7 tw-p-12 tw-bg-[#CCD7FF] tw-rounded-md tw-mx-auto tw-relative">
+<div class="tw-text-[14px] tw-mt-7 tw-p-12 tw-bg-aipurple tw-rounded-md tw-mx-auto tw-relative">
 	<span class="tw-font-extrabold tw-text-[30px] tw-uppercase tw-relative"
 		>{{ 'CreateBadge.aiAssistant' | translate }}
 		<img
