--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -305,7 +305,7 @@
                   <p hlmP class="tw-my-2">{{ 'CreateBadge.NoPersonalInformation' | translate }}</p>
                   <p hlmP class="tw-mb-2">{{ 'CreateBadge.addAiCompetencies' | translate }}</p>
                 </div> -->
-									<div class="tw-mt-7 tw-p-12 tw-bg-[#CCD7FF] tw-rounded-md tw-mx-auto tw-relative">
+									<div class="tw-mt-7 tw-p-12 tw-bg-aipurple tw-rounded-md tw-mx-auto tw-relative">
 										<span class="tw-font-extrabold tw-text-xl tw-uppercase tw-relative"
 											>{{ 'CreateBadge.aiAssistant' | translate }}
 											<img
