--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -77,10 +77,10 @@
 				<!-- Sidebar -->
 				<div class="tw-flex md:tw-flex-row tw-flex-col tw-gap-16 tw-mt-4 tw-relative md:tw-mx-0 tw-mx-auto">
 					<div class="md:tw-w-[346px] md:tw-p-0 tw-pb-8 md:tw-flex-grow-1">
-						<div class="badge-sidebar-internal tw-flex tw-flex-wrap">
+						<div class="badge-sidebar-internal tw-rounded-lg tw-flex tw-flex-wrap">
 							<div class="md:tw-min-w-[260px] tw-min-w-[200px]">
 								<div
-									class="tw-flex tw-items-center tw-bg-white tw-mx-auto tw-py-8 tw-rounded-[20px] oeb-slight-shadow"
+									class="tw-flex tw-items-center tw-bg-white tw-mx-auto tw-py-8 tw-rounded-lg oeb-slight-shadow"
 								>
 									<img
 										class="tw-w-[120.88px] tw-h-[120.88px] md:tw-w-[172.69px] md:tw-h-[172.69px] tw-mx-auto tw-block"
@@ -91,7 +91,7 @@
 								</div>
 								<!-- Issuer Information -->
 								<div
-									class="tw-mt-4 tw-mx-auto tw-flex tw-items-center oeb-slight-shadow tw-pl-4 tw-pr-2 tw-py-4 tw-bg-white tw-rounded-[20px]"
+									class="tw-mt-4 tw-mx-auto tw-flex tw-items-center oeb-slight-shadow tw-pl-4 tw-pr-2 tw-py-4 tw-bg-white tw-rounded-lg"
 								>
 									<div>
 										<img
@@ -181,13 +181,9 @@
 									</div>
 								}
 								@if (config.copy_permissions) {
-									<div class="tw-flex tw-flex-row tw-gap-1">
-										<dt
-											class="tw-text-oebblack tw-font-bold"
-											[innerHTML]="('Badge.copyableFor' | translate) + ': '"
-										></dt>
+									<div class="tw-flex tw-italic tw-text-oebblack tw-flex-row tw-gap-1">
+										<dt [innerHTML]="('Badge.copyableFor' | translate) + ': '"></dt>
 										<dd
-											class="tw-text-oebblack tw-italic"
 											[innerHTML]="
 												config.copy_permissions.includes('others')
 													? ('Issuer.allInstitutions' | translate)
@@ -196,31 +192,13 @@
 										></dd>
 									</div>
 								}
-								@if (config.tags.length > 0) {
-									<div class="tw-flex tw-items-start md:tw-flex-row tw-flex-col">
-										<dt class="tw-text-oebblack tw-font-bold md:tw-py-2 md:tw-mr-2 tw-mb-1">
-											Tags
-										</dt>
-										<dd class="tw-text-oebblack">
-											@for (tag of config.tags; track tag; let last = $last) {
-												<div
-													class="tag tw-border-[var(--color-purple)] tw-mx-2 tw-ml-0 tw-max-w-24"
-												>
-													{{ tag }}
-												</div>
-											}
-										</dd>
-									</div>
-								}
 								@if (config.version) {
-									<div
-										class="tw-flex tw-text-oebblack tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col tw-items-center"
-									>
-										<dt class="tw-text-sm tw-text-oebblack tw-font-bold">
+									<div class="tw-flex tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col tw-items-center">
+										<dt class="tw-text-sm tw-text-darkgray">
 											{{ 'Badge.standard' | translate }}
 										</dt>
 										<dd
-											class="tw-text-sm tw-text-oebblack md:tw-ml-2 tw-flex tw-items-center tw-gap-1"
+											class="tw-text-sm tw-text-oebblack md:tw-ml-2 tw-flex tw-items-center tw-gap-1 tw-font-medium"
 										>
 											{{ config.version }}
 											<info-icon>
@@ -234,65 +212,59 @@
 									</div>
 								}
 								@if (config.category) {
-									<div class="tw-flex tw-text-oebblack tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
-										<dt class="tw-text-sm tw-text-oebblack tw-font-bold">
+									<div class="tw-flex tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
+										<dt class="tw-text-sm tw-text-darkgray">
 											{{ 'General.category' | translate }}
 										</dt>
-										<dd class="tw-text-sm tw-text-oebblack md:tw-ml-2">{{ config.category }}</dd>
+										<dd class="tw-text-sm tw-text-oebblack tw-font-medium md:tw-ml-2">
+											{{ config.category }}
+										</dd>
 									</div>
 								}
 								@if (config.duration) {
-									<div class="tw-flex tw-text-oebblack tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
-										<dt class="tw-text-sm tw-text-oebblack tw-font-bold">
+									<div class="tw-flex tw-text-sm tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
+										<dt class="tw-text-darkgray">
 											{{ 'RecBadgeDetail.duration' | translate }}
 										</dt>
-										<dd class="tw-text-sm tw-text-oebblack md:tw-ml-2">
+										<dd class="tw-text-oebblack tw-font-medium md:tw-ml-2">
 											{{ +config.duration | hourPipe }} {{ 'RecBadge.hours' | translate }}
 										</dd>
 									</div>
 								}
-								@if (config.updatedAt) {
-									<div class="tw-flex tw-text-oebblack tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
-										<dt class="tw-text-sm tw-text-oebblack tw-font-bold">
-											{{ 'Badge.lastEdited' | translate }}
-										</dt>
-										<dd class="tw-text-sm tw-text-oebblack md:tw-ml-2">
-											<time [date]="config.updatedAt" format="dd.MM.y"></time>
-										</dd>
-									</div>
-								}
 								@if (config.createdAt) {
-									<div class="tw-flex tw-text-oebblack tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
-										<dt class="tw-text-sm tw-text-oebblack tw-font-bold">Erstellt am</dt>
-										<dd class="tw-text-sm tw-text-oebblack md:tw-ml-2">
+									<div class="tw-flex tw-text-sm tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
+										<dt class="tw-text-darkgray">{{ 'Badge.createdOn' | translate }}</dt>
+										<dd class="tw-font-medium md:tw-ml-2 tw-text-oebblack">
 											<time [date]="config.createdAt" format="dd.MM.y"></time>
 										</dd>
 									</div>
 								}
 								@if (config.issuedOn) {
-									<div class="tw-flex tw-text-oebblack tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
-										<dt class="tw-text-sm tw-text-oebblack tw-font-bold">
+									<div class="tw-flex tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
+										<dt class="tw-text-sm tw-text-darkgray">
 											{{ 'RecBadgeDetail.issuedOn' | translate }}
 										</dt>
-										<dd class="tw-text-sm tw-text-oebblack md:tw-ml-2">
+										<dd class="tw-text-sm tw-font-medium tw-text-oebblack md:tw-ml-2">
 											<time [date]="config.issuedOn" format="dd.MM.y"></time>
 										</dd>
 									</div>
 								}
 								@if (config.issuedTo) {
-									<div class="tw-flex tw-text-oebblack tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
-										<dt class="tw-text-sm tw-text-oebblack tw-font-bold">
+									<div class="tw-flex tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
+										<dt class="tw-text-sm tw-text-darkgray">
 											{{ 'RecBadgeDetail.awardedTo' | translate }}
 										</dt>
-										<dd class="tw-text-sm tw-break-words">&nbsp;{{ config.issuedTo }}</dd>
+										<dd class="tw-text-sm tw-break-words tw-font-medium">
+											&nbsp;{{ config.issuedTo }}
+										</dd>
 									</div>
 								}
 								@if (config.license) {
-									<div class="tw-text-oebblack tw-mt-2 tw-pt-2 md:tw-flex-row tw-flex-col">
-										<dt class="tw-text-sm tw-text-oebblack tw-font-bold">
+									<div class="tw-mt-2 tw-pt-2 tw-flex tw-flex-row">
+										<dt class="tw-text-sm tw-text-darkgray">
 											{{ 'General.license' | translate }}
 										</dt>
-										<dd class="tw-text-sm tw-text-oebblack md:tw-ml-2 tw-flex">
+										<dd class="tw-text-sm tw-text-oebblack tw-ml-2 tw-flex">
 											<div
 												class="tw-ml-1 tw-w-5 tw-h-5 tw-flex tw-items-center tw-justify-center tw-border-solid tw-border-[1px] tw-border-oebblack tw-rounded-full"
 											>
@@ -310,6 +282,18 @@
 											>
 												CC0 1.0</a
 											>
+										</dd>
+									</div>
+								}
+								@if (config.tags.length > 0) {
+									<div class="tw-flex tw-items-start tw-flex-col tw-mt-4">
+										<dt class="tw-text-darkgray md:tw-py-2 md:tw-mr-2 tw-mb-1">Tags</dt>
+										<dd class="tw-text-darkgray">
+											@for (tag of config.tags; track tag; let last = $last) {
+												<div class="tag tw-border-darkgray tw-mx-2 tw-ml-0 tw-max-w-24">
+													{{ tag }}
+												</div>
+											}
 										</dd>
 									</div>
 								}
