--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -110,74 +110,59 @@
 								</div>
 							</div>
 							<dl clss="tw-min-w-[150px]">
-								@if (config.badgeCriteria && config.category == competencyBadge) {
+								@if (hasCriteria || config.competencies.length) {
 									<div class="tw-bg-white tw-mb-4 tw-rounded-[10px]">
-										<ng-template>
-											@if (config.badgeCriteria.length || config.competencies.length) {
-												<oeb-collapsible
-													[trigger]="collapseCriteriaTrigger"
-													closeIcon="lucideChevronDown"
-													[defaultOpen]="
-														typeof(config.badgeCriteria) != 'string' &&
-														config.badgeCriteria.length > 0
-													"
-													[id]=""
+										<oeb-collapsible
+											[trigger]="collapseCriteriaTrigger"
+											closeIcon="lucideChevronDown"
+											[defaultOpen]="hasCriteria"
+											[id]=""
+										>
+											<ng-template #collapseCriteriaTrigger>
+												<dt
+													class="tw-mr-auto tw-flex tw-justify-center tw-items-center tw-px-2"
 												>
-													<ng-template #collapseCriteriaTrigger>
-														<dt
-															class="tw-mr-auto tw-flex tw-justify-center tw-items-center tw-px-2"
-														>
-															<ng-icon
-																hlm
-																name="lucideAward"
-																class="tw-w-8 tw-h-8 tw-text-purple"
-															>
-															</ng-icon>
-															<span
-																class="tw-text-oebblack tw-font-bold tw-text-sm tw-ml-1"
-																[innerHTML]="'Badge.awardCriteria' | translate"
-															></span>
-														</dt>
-													</ng-template>
-													@if (
-														typeof(config.badgeCriteria) != 'string' &&
-														config.badgeCriteria.length
-													) {
-														<dd>
-															<ul class="tw-pr-2 tw-pl-8 tw-list-inside tw-list-disc">
-																@for (
-																	criteria of config.badgeCriteria;
-																	track criteria
-																) {
-																	<li class="tw-mb-1">
-																		<span class="tw-text-oebblack">{{
-																			criteria['name']
-																		}}</span>
-																		@if (criteria['description']) {
-																			<p
-																				class="tw-text-oebblack tw-italic tw-font-thin tw-ml-4 tw-mt-1"
-																			>
-																				{{ criteria['description'] }}
-																			</p>
-																		}
-																	</li>
+													<ng-icon
+														hlm
+														name="lucideAward"
+														class="tw-w-8 tw-h-8 tw-text-purple"
+													>
+													</ng-icon>
+													<span
+														class="tw-text-oebblack tw-font-bold tw-text-sm tw-ml-1"
+														[innerHTML]="'Badge.awardCriteria' | translate"
+													></span>
+												</dt>
+											</ng-template>
+											@if (hasCriteria) {
+												<dd>
+													<ul class="tw-pr-2 tw-pl-8 tw-list-inside tw-list-disc">
+														@for (criteria of config.awardCriteria; track criteria.name) {
+															<li class="tw-mb-1">
+																<span class="tw-text-oebblack">{{
+																	criteria.name
+																}}</span>
+																@if (criteria.description) {
+																	<p
+																		class="tw-text-oebblack tw-italic tw-font-thin tw-ml-4 tw-mt-1"
+																	>
+																		{{ criteria.description }}
+																	</p>
 																}
-															</ul>
-														</dd>
-													} @else {
-														<ul class="tw-pr-2 tw-pl-8 tw-list-inside tw-list-disc">
-															@for (competency of config.competencies; track competency) {
-																<li class="tw-mb-1">
-																	<span class="tw-text-oebblack">{{
-																		competency.name
-																	}}</span>
-																</li>
-															}
-														</ul>
+															</li>
+														}
+													</ul>
+												</dd>
+											} @else {
+												<ul class="tw-pr-2 tw-pl-8 tw-list-inside tw-list-disc">
+													@for (competency of config.competencies; track competency) {
+														<li class="tw-mb-1">
+															<span class="tw-text-oebblack">{{ competency.name }}</span>
+														</li>
 													}
-												</oeb-collapsible>
+												</ul>
 											}
-										</ng-template>
+										</oeb-collapsible>
 									</div>
 								}
 								@if (config.copy_permissions) {
