fix: remove titlecase pipe

--- a/src/app/profile/components/profile/profile.component.html
+++ b/src/app/profile/components/profile/profile.component.html
@@ -111,7 +111,7 @@
 </main>
 
 <ng-template #translateHeaderIDCellTemplate let-context>
-	{{ context.header.id | translate | titlecase }}
+	{{ context.header.id | translate }}
 </ng-template>
 
 <ng-template #emailAddressCellTemplate let-context>
