fix: remove titlecase pipe (#1586)

--- a/src/app/issuer/components/issuer-staff/issuer-staff.component.html
+++ b/src/app/issuer/components/issuer-staff/issuer-staff.component.html
@@ -236,7 +236,7 @@
 </ng-template>
 
 <ng-template #translateHeaderIDCellTemplate let-context>
-	{{ context.header.id | translate | titlecase }}
+	{{ context.header.id | translate }}
 </ng-template>
 
 <ng-template #roleSelectionCellTemplate let-context>
