--- a/src/app/profile/components/profile/profile.component.html
+++ b/src/app/profile/components/profile/profile.component.html
@@ -109,7 +109,7 @@
 </main>
 
 <ng-template #translateHeaderIDCellTemplate let-context>
-	{{ context.header.id | translate | titlecase }}
+	{{ context.header.id | translate }}
 </ng-template>
 
 <ng-template #emailAddressCellTemplate let-context>
