--- a/src/app/components/issuer-card/issuer-card.component.html
+++ b/src/app/components/issuer-card/issuer-card.component.html
@@ -37,17 +37,7 @@
 				[routerLink]="['/public/issuers/', issuer?.slug]"
 			>
 				<img src="assets/badges/badgeIcon.svg" alt="bade icon" class="tw-w-9" />
-				<p
-					[innerHTML]="
-						issuer?.badgeClassCount
-							| i18nPlural
-								: {
-										'=0': ('Badge.noBadges' | translate),
-										'=1': ('Badge.oneBadge' | translate),
-										other: ('Badge.multiBadges' | translate)
-								  }
-					"
-				></p>
+				<p [innerHTML]="issuer?.badgeClassCount | i18nPlural: plural['badges']"></p>
 			</a>
 			@if (issuer?.learningPathCount > 0) {
 				<a
