--- a/src/app/issuer/components/issuer-list/issuer-list.component.html
+++ b/src/app/issuer/components/issuer-list/issuer-list.component.html
@@ -245,6 +245,7 @@
 							[text]="'Issuer.createBadge' | translate"
 							width="full_width"
 							size="mediumText"
+							[umamiEvent]="'create-badge'"
 						>
 						</oeb-button>
 					}
@@ -269,6 +270,7 @@
 									variant="secondary"
 									width="full_width"
 									size="mediumText"
+									[umamiEvent]="'create-badge'"
 								>
 								</oeb-button>
 							</div>
