--- a/src/app/issuer/components/issuer-list/issuer-list.component.html
+++ b/src/app/issuer/components/issuer-list/issuer-list.component.html
@@ -228,14 +228,11 @@
 						</div>
 					</div>
 					<div class="tw-pt-4 tw-pb-6">
-						<p
-							[class.tw-line-clamp-3]="issuerToBadgeInfo[issuer.issuerUrl]"
-							class="tw-text-oebblack tw-break-words"
-						>
+						<p [class.tw-line-clamp-3]="issuer.badgeClassCount" class="tw-text-oebblack tw-break-words">
 							{{ issuer.description }}
 						</p>
 					</div>
-					@if (!issuerToBadgeInfo[issuer.issuerUrl]) {
+					@if (!issuer.badgeClassCount) {
 						<oeb-button
 							[id]="'create-new-badge-btn-1'"
 							[class.disabled]="!issuer.canCreateBadge"
@@ -248,7 +245,7 @@
 						>
 						</oeb-button>
 					}
-					@if (issuerToBadgeInfo[issuer.issuerUrl]) {
+					@if (issuer.badgeClassCount) {
 						<div>
 							<oeb-button
 								class="tw-whitespace-nowrap tw-flex-grow"
