--- a/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
+++ b/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
@@ -24,12 +24,12 @@
 					!isDevMode
 				"
 			>
-				<section class="tw-mt-6 md:tw-mt-7 section oeb-section">
-					<h2 hlmH2 class="tw-font-bold">2. {{ 'LearningPath.enterDetails' | translate }}</h2>
+				<section class="tw-mt-6 md:tw-mt-8 section oeb-section">
+					<h2 hlmH2 class="tw-font-bold">2. {{ 'CreateBadge.enterDetailsStep' | translate }}</h2>
 
 					<div class="md:tw-mx-10">
 						<oeb-input
-							[label]="'1. ' + ('LearningPath.title' | translate)"
+							[label]="'1. ' + ('General.title' | translate)"
 							[control]="learningPathForm.rawControlMap.name"
 							[autofocus]="true"
 							[sublabelRight]="'(max. 60 ' + ('General.characters' | translate) + ')'"
@@ -42,19 +42,17 @@
 							placeholder="{{ 'LearningPathEditor.shortDescription' | translate }}"
 						></oeb-input>
 
-						<div class="tw-mt-6 md:tw-mt-7 tw-relative" id="imageSection" #imageSection>
+						<div class="tw-mt-6 md:tw-mt-8 tw-relative" id="imageSection" #imageSection>
 							<!-- <span class="input-label md:tw-flex-[0_0_10em]"> Badge-{{ 'Issuer.image' | translate }}</span> -->
 							<span
 								hlmP
 								class="tw-text-oebblack tw-font-semibold"
-								[innerHTML]="3 + ' ' + ('LearningPath.mdImage' | translate)"
+								[innerHTML]="3 + '. ' + ('RecBadge.image' | translate)"
 							></span>
 							<div
 								class="tw-flex tw-flex-col tw-gap-4 lg:tw-flex-row tw-bg-white tw-p-8 tw-justify-evenly tw-mr-auto tw-rounded-2xl tw-h-fit tw-border tw-border-solid tw-border-purple"
 							>
-								<div
-									class="tw-w-full tw-bg-[var(--color-lightgreen)] tw-rounded-[10px] tw-py-[16px] tw-px-[32px]"
-								>
+								<div class="tw-w-full tw-bg-mint tw-rounded-[10px] tw-py-[16px] tw-px-[32px]">
 									<bg-formfield-image
 										#imageField
 										[label]="useOurEditor"
@@ -83,7 +81,7 @@
 									>
 									</bg-formfield-image>
 									<span
-										class="tw-italic tw-text-sm md:tw-flex md:tw-justify-center md:tw-items-center"
+										class="tw-italic tw-text-oebblack tw-text-sm md:tw-flex md:tw-justify-center md:tw-items-center"
 										>{{ 'General.fileformats' | translate }}: SVG
 										{{ 'General.and' | translate }} PNG</span
 									>
@@ -93,11 +91,11 @@
 										</span>
 									</div>
 								</div>
-								<div class="tw-italic tw-self-start tw-mt-6 tw-text-[24px]">
+								<div class="tw-italic tw-text-oebblack tw-self-start tw-mt-6 tw-text-[24px]">
 									{{ 'General.or' | translate }}
 								</div>
 								<div
-									class="tw-w-full tw-bg-[var(--color-lightgreen)] tw-rounded-[10px] tw-py-[16px] tw-px-[32px] tw-max-h-[400px]"
+									class="tw-w-full tw-bg-mint tw-rounded-[10px] tw-py-[16px] tw-px-[32px] tw-max-h-[400px]"
 								>
 									<bg-formfield-image
 										#customImageField
@@ -119,7 +117,7 @@
 									>
 									</bg-formfield-image>
 									<span
-										class="tw-italic tw-text-sm md:tw-flex md:tw-justify-center md:tw-items-center"
+										class="tw-italic tw-text-oebblack tw-text-sm md:tw-flex md:tw-justify-center md:tw-items-center"
 										>{{ 'General.fileformats' | translate }}: PNG</span
 									>
 								</div>
@@ -158,7 +156,7 @@
 				[hasError]="!firstStep() && learningPathForm.hasError('minSelectedBadges') && !isDevMode"
 			>
 				<ng-template [showLoader]="true" [bgAwaitPromises]="badgesLoaded">
-					<div class="tw-mt-6 md:tw-mt-7 oeb-section section">
+					<div class="tw-mt-6 md:tw-mt-8 oeb-section section">
 						<h2 hlmH2 class="tw-font-bold">3. {{ 'LearningPath.chooseBadges' | translate }}</h2>
 
 						<div class="tw-m-4 md:tw-m-12 tw-rounded-2xl tw-p-6 md:tw-p-8 tw-bg-white">
@@ -258,37 +256,6 @@
 									</div>
 								}
 							}
-							@if (groupBy == 'Issuer' || groupBy == 'Institution') {
-								@for (issuerGroup of badgeResultsByIssuer; track issuerGroup) {
-									<h3 class="u-text-h3-semibold u-margin-bottom2x u-margin-top6x u-text-dark1">
-										{{ issuerGroup.issuerName }}
-										<span class="u-text-small-semibold-caps u-text-dark4 u-margin-left2x"
-											>{{ issuerGroup.badges.length }}
-											{{ issuerGroup.badges.length == 1 ? 'Badge' : 'Badges' }}</span
-										>
-									</h3>
-									<div class="tw-grid sm:tw-grid-cols-badgesLp tw-gap-6">
-										<!-- TODO: Fix the badgecard link for sharing and routing -->
-										@for (badge of issuerGroup.badges; track badge) {
-											<bg-badgecard
-												[badgeTitle]="badge.name"
-												[badgeImage]="badge.image"
-												[badgeDescription]="badge.description"
-												[badgeSlug]="badge.slug"
-												[issuerTitle]="badge.issuerName ? badge.issuerName : badge.issuer"
-												[badgeIssueDate]="badge.createdAt"
-												[public]="true"
-												[publicUrl]="badge.url"
-												[competencies]="badge.extension['extensions:CompetencyExtension']"
-												[showCheckbox]="true"
-												(ngModelChange)="checkboxChange($event, badge)"
-												(checkboxChange)="checkboxChange($event, badge)"
-												[checked]="badgeChecked(badge)"
-											></bg-badgecard>
-										}
-									</div>
-								}
-							}
 							@if (selectedBadges.length == 1) {
 								<p class="tw-mt-6">
 									{{ 'LearningPath.selectedBadgesOne' | translate }}
@@ -337,7 +304,7 @@
 			</cdk-step>
 			<cdk-step [label]="'LearningPath.badgeSequenceStep' | translate">
 				<ng-container>
-					<div class="tw-mt-6 md:tw-mt-7 oeb-section section">
+					<div class="tw-mt-6 md:tw-mt-8 oeb-section section">
 						<h2 hlmH2 class="tw-font-bold">4. {{ 'LearningPath.badgeSequence' | translate }}</h2>
 						<div class="tw-m-4 md:tw-m-12 tw-rounded-2xl tw-p-6 tw-bg-[var(--color-white)]">
 							<p
@@ -382,7 +349,11 @@
 						<h2 hlmH2 class="tw-text-purple tw-flex tw-gap-2 tw-font-bold">
 							<span>{{ 'LearningPath.addTag' | translate }}</span>
 						</h2>
-						<p class="tw-italic tw-text-purple tw-mt-2" [innerHtml]="'CreateBadge.tagInfo' | translate"></p>
+						<p
+							class="tw-italic tw-text-purple tw-mt-2"
+							[translate]="'CreateBadge.tagInfo'"
+							[translateParams]="{ items: learningpathsPlural }"
+						></p>
 
 						<div class="tw-flex tw-gap-2 oeb tw-mt-4">
 							<div class="tw-flex tw-gap-4 tw-items-center tw-mb-2">
@@ -440,8 +411,8 @@
 					</div>
 				</div>
 
-				<div class="tw-mt-6 md:tw-mt-7 oeb-section section">
-					<h2 hlmH2 class="tw-font-bold">{{ 'LearningPath.lpParticipationBadge' | translate }}</h2>
+				<div class="tw-mt-6 md:tw-mt-8 oeb-section section">
+					<h2 hlmH2 class="tw-font-bold">{{ 'LearningPath.learningPathWithMicroDegree' | translate }}</h2>
 					<p
 						hlmP
 						class="tw-text-[18px] tw-mt-2 tw-leading-[23.4px] tw-italic tw-font-bold"
@@ -485,7 +456,7 @@
 
 				<section
 					#activationSection
-					class="tw-bg-purple tw-rounded-[25px] tw-py-[21.2px] tw-px-[11px] md:tw-p-[25.2px] tw-mt-6 md:tw-mt-7 tw-mb-8"
+					class="tw-bg-purple tw-rounded-[25px] tw-py-[21.2px] tw-px-[11px] md:tw-p-[25.2px] tw-mt-6 md:tw-mt-8 tw-mb-8"
 				>
 					<h2 hlmH2 class="tw-text-white">{{ 'LearningPath.activateMd' | translate }}</h2>
 					<p class="tw-flex tw-flex-col tw-gap-2 tw-mt-2">
