fix: button width

--- a/src/app/issuer/components/issuer-list/issuer-list.component.html
+++ b/src/app/issuer/components/issuer-list/issuer-list.component.html
@@ -189,7 +189,7 @@
 			>
 			</span>
 			<oeb-button
-				class="md:tw-whitespace-nowrap"
+				class="md:tw-whitespace-nowrap tw-w-fit"
 				[routerLink]="['/issuer/create']"
 				[disabled-when-requesting]="true"
 				[text]="'Issuer.createInstitutionNow' | translate"
