--- a/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
+++ b/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
@@ -1,21 +1,22 @@
 <form (ngSubmit)="onSubmit()" class="oeb-max-form-width tw-mt-6" novalidate>
-	<bg-formfield-image
-		#imageField
-		label="{{ 'Issuer.imageLogo' | translate }}"
-		sublabelRight="{{ 'Issuer.imageFormat' | translate }}"
-		imageLoaderName="issuer"
-		[text_body]="selectFromMyFiles"
-		dropZoneInfo1="Drag & Drop"
-		[dropZoneInfo3]="useImageFormat"
-		[placeholderImage]="issuerImagePlacholderUrl"
-		[control]="issuerForm.rawControlMap.issuer_image"
-		[allowedFileFormats]="['image/png', 'image/svg+xml']"
-		[errorMessage]="imageError"
-		(imageError)="onImageError($event)"
-		[enableIconSearch]="false"
-		[maxSizeInMB]="2"
-		[labelStyle]="'forminput-x-label u-margin-bottom1x'"
-	></bg-formfield-image>
+	<div #imageField>
+		<bg-formfield-image
+			label="{{ 'Issuer.imageLogo' | translate }}"
+			sublabelRight="{{ 'Issuer.imageFormat' | translate }}"
+			imageLoaderName="issuer"
+			[text_body]="selectFromMyFiles"
+			dropZoneInfo1="Drag & Drop"
+			[dropZoneInfo3]="useImageFormat"
+			[placeholderImage]="issuerImagePlacholderUrl"
+			[control]="issuerForm.rawControlMap.issuer_image"
+			[allowedFileFormats]="['image/png', 'image/svg+xml']"
+			[errorMessage]="imageError"
+			(imageError)="onImageError($event)"
+			[enableIconSearch]="false"
+			[maxSizeInMB]="2"
+			[labelStyle]="'forminput-x-label u-margin-bottom1x'"
+		></bg-formfield-image>
+	</div>
 	<span class="tw-text-oebblack tw-italic tw-text-lg"
 		>{{ 'General.fileformats' | translate }}: SVG {{ 'General.and' | translate }} PNG</span
 	>
