feat: adjust issuer form and fix margins

--- a/src/app/issuer/components/issuer-create/issuer-create.component.html
+++ b/src/app/issuer/components/issuer-create/issuer-create.component.html
@@ -7,7 +7,7 @@
 				class="tw-text-purple oeb-standard-padding-bottom tw-font-bold"
 				[innerHTML]="'Issuer.createInstitution' | translate"
 			></h1>
-			<p hlmP class="tw-font-normal" [innerHTML]="'Issuer.awardBadges' | translate"></p>
+			<p hlmP class="tw-font-normal tw-mt-8" [innerHTML]="'Issuer.awardBadges' | translate"></p>
 			<p hlmP class="tw-font-normal">{{ 'Issuer.institutionWillAward' | translate }}</p>
 		</div>
 
