--- a/src/app/issuer/components/issuer-edit/issuer-edit.component.html
+++ b/src/app/issuer/components/issuer-edit/issuer-edit.component.html
@@ -6,8 +6,10 @@
 			<bg-breadcrumbs [linkentries]="editIssuerCrumbs"> </bg-breadcrumbs>
 		</div>
 		<div class="oeb-headline-container-sm">
-			<h1 hlmH1 class="tw-text-purple">{{ 'Issuer.editInstitution' | translate }}</h1>
-			<p hlmP class="tw-font-normal">{{ 'Issuer.editInstitutionInfo' | translate }}</p>
+			<h1 hlmH1 class="tw-text-purple tw-font-extrabold tw-text-[46px] tw-leading-[115%]">
+				{{ 'Issuer.editInstitution' | translate }}
+			</h1>
+			<p hlmP class="tw-font-normal tw-mt-8">{{ 'Issuer.editInstitutionInfo' | translate }}</p>
 		</div>
 	</div>
 
