--- a/src/app/issuer/components/network-create/network-create.component.html
+++ b/src/app/issuer/components/network-create/network-create.component.html
@@ -9,6 +9,6 @@
 			></h1>
 		</div>
 
-		<network-edit-form></network-edit-form>
+		<issuer-edit-form [networkForm]="true"></issuer-edit-form>
 	</div>
 </div>
